# gscreen

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: color.rs  main.rs  proxy.rs  pty.rs  terminal.rs  vte_handler.rs
