[package]
name = "gscreen"
version = "0.2.0"
edition = "2021"
authors = ["Gamunu Balagalla <gamunu@fastcode.io>"]
description = "A true color command wrapper for terminal programs"
repository = "https://github.com/gamunu/gscreen"
license = "GPL-2.0"
keywords = ["terminal", "colors", "wrapper", "pty"]
categories = ["command-line-utilities"]

[dependencies]
portable-pty = "0.8"
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.28"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
which = "6.0"
vte = "0.13"
libc = "0.2"
